--- a/Tp9/pom.xml
+++ b/Tp9/pom.xml
@@ -17,7 +17,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-     <spring.version>5.3.13</spring.version>
+     <spring.version>3.2.8.RELEASE</spring.version>
     <hibernate.version>5.0.4.Final</hibernate.version>
   </properties>
 
@@ -31,7 +31,7 @@
      <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.3.14</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
